--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </header>
     <div>
     <h1>Kavipriya</h1>
-    <p style="color:#000">Web Developer</p>
+    <p style="color:#000; text-align: center";>Web Developer</p>
     </div>
     <div>
         <h3>Introduction</h3>
